fixed overflow issue for about and exhibition on lower res screens and got rid of apple-logo.png files causing errors

--- a/src/Components/About/_About.scss
+++ b/src/Components/About/_About.scss
@@ -6,6 +6,7 @@
     justify-content: flex-start;
     flex-direction: column;
     align-items: center;
+    overflow: auto;
     
     @media (min-width: $screen-md) {
         height: 100vh;
